# setuptools configuration and metadata in the declarative form

[metadata]
name = smbjoin
version = attr: smbjoin.__version__
description = Offline Windows AD domain join tool for Samba
long_description = file: README.md
author = Sergey Kvachonok
author_email = ravenexp@gmail.com
url = https://github.com/ravenexp/smbjoin
keywords = ADS, Samba, TDB, Windows
license = MIT

[options]
packages = smbjoin
python_requires = >=3.6
zip_safe = True
package_dir =
    = src
install_requires =
    pycryptodome ~=3.10.0
    regipy ~=2.2.0

[options.entry_points]
console_scripts =
    smb-net-ads-join = smbjoin.cli:net_ads_join

[options.package_data]
* = py.typed
